--- a/rsg-core/Cargo.toml
+++ b/rsg-core/Cargo.toml
@@ -4,6 +4,21 @@ version = "0.1.0"
 authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "rsg_core"
+crate-type = ["staticlib","rlib"]
 
 [dependencies]
+num = "0.2"
+num-derive = "0.3"
+num-traits = "0.2"
+ibmfloat = "0.1"
+serde = { version = "1.0.40", features = ["derive"], optional = true }
+serde_json = { version = "1", optional = true }
+
+[build-dependencies.cbindgen]
+version = "0.14"
+
+[features]
+default = []
+to_json = ["serde", "serde_json"]
