--- a/rsg-core/Cargo.toml
+++ b/rsg-core/Cargo.toml
@@ -9,10 +9,11 @@ name = "rsg_core"
 crate-type = ["staticlib","rlib"]
 
 [dependencies]
+encoding8 = "0.3"
+ibmfloat = "0.1"
 num = "0.2"
 num-derive = "0.3"
 num-traits = "0.2"
-ibmfloat = "0.1"
 serde = { version = "1.0.40", features = ["derive"], optional = true }
 serde_json = { version = "1", optional = true }
 
