--- a/rsg-out/Cargo.toml
+++ b/rsg-out/Cargo.toml
@@ -4,6 +4,18 @@ version = "0.1.0"
 authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "rsg_out"
+crate-type = ["staticlib","rlib"]
 
 [dependencies]
+rsg-core = { path = "../rsg-core" }
+
+fnv = "1"
+num = "0.2"
+tinyvec = { version = "1.5", features = ["alloc"] }
+
+
+[dev-dependencies]
+rsg-in = { path = "../rsg-in" }
+tempfile = "3.3"
