Rename everything. - WHY: `rsg` is hard to decode compared to `giga_segy`. Also `giga_segy` sounds cooler. Thanks Georg.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = [
-    "rsg-core",
-    "rsg-in",
-    "rsg-out",
+    "giga-segy-core",
+    "giga-segy-in",
+    "giga-segy-out",
 ]
