--- a/giga-segy-core/Cargo.toml
+++ b/giga-segy-core/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "rsg-core"
-version = "0.1.0"
+name = "giga-segy-core"
+version = "0.2.0"
 authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
 edition = "2018"
 
 [lib]
-name = "rsg_core"
+name = "giga_segy_core"
 crate-type = ["staticlib","rlib"]
 
 [dependencies]
