Modify `build.rs`: - WHY: The old procedure of including header address in the environmental variables was not working correctly. - SOLUTION: We move header directly to build directory, where it can be picked up by the receiving crate as needed.

--- a/giga-segy-core/Cargo.toml
+++ b/giga-segy-core/Cargo.toml
@@ -3,6 +3,7 @@ name = "giga-segy-core"
 version = "0.2.0"
 authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
 edition = "2018"
+links = ""
 
 [lib]
 name = "giga_segy_core"
