--- a/giga-segy-core/Cargo.toml
+++ b/giga-segy-core/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "giga-segy-core"
-version = "0.2.0"
+version = "0.2.1"
 authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
 edition = "2018"
+links = ""
 
 [lib]
 name = "giga_segy_core"
