Corrections and application of suggestions for documentation.

--- a/giga-segy-core/Cargo.toml
+++ b/giga-segy-core/Cargo.toml
@@ -18,6 +18,9 @@ num-traits = "0.2"
 serde = { version = "1.0.40", features = ["derive"], optional = true }
 serde_json = { version = "1", optional = true }
 
+[dev-dependencies]
+giga-segy-out = { path = "../giga-segy-out" }
+
 [build-dependencies.cbindgen]
 version = "0.24"
 
