--- a/giga-segy-core/Cargo.toml
+++ b/giga-segy-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "giga-segy-core"
-version = "0.2.4"
+version = "0.3.0"
 authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
 edition = "2018"
 links = ""
@@ -26,4 +26,5 @@ version = "0.24"
 
 [features]
 default = []
+serialize = ["serde"]
 to_json = ["serde", "serde_json"]
