--- a/giga-segy-core/Cargo.toml
+++ b/giga-segy-core/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.3.0"
 authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
 edition = "2018"
 links = ""
+license = "MIT OR Apache-2.0"
 
 [lib]
 name = "giga_segy_core"
