--- a/giga-segy-core/Cargo.toml
+++ b/giga-segy-core/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "giga-segy-core"
-version = "0.3.0"
 authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
+description = "A library containing basic structures for working with SEG-Y."
+documentation = "https://docs.rs/giga_segy_core"
 edition = "2018"
-links = ""
+keywords = ["geo", "SEG-Y", "SEGY", "seismic"]
 license = "MIT OR Apache-2.0"
+links = ""
+repository = "https://github.com/GiGainfosystems/giga-segy"
+version = "0.3.0"
 
 [lib]
 name = "giga_segy_core"
@@ -24,8 +28,10 @@ giga-segy-out = { path = "../giga-segy-out" }
 
 [build-dependencies.cbindgen]
 version = "0.24"
+optional = true
 
 [features]
 default = []
 serde = ["dep:serde"]
 to_json = ["serde", "serde_json"]
+gen_cbindings = ["cbindgen"]
