--- a/giga-segy-in/Cargo.toml
+++ b/giga-segy-in/Cargo.toml
@@ -1,16 +1,20 @@
 [package]
 name = "giga-segy-in"
-version = "0.3.0"
 authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
+description = "A library allows parsing of SEG-Y."
+documentation = "https://docs.rs/giga_segy_in"
 edition = "2018"
+keywords = ["geo", "SEG-Y", "SEGY", "seismic", "input", "parser"]
 license = "MIT OR Apache-2.0"
+repository = "https://github.com/GiGainfosystems/giga-segy"
+version = "0.3.0"
 
 [lib]
 name = "giga_segy_in"
 crate-type = ["staticlib","rlib"]
 
 [dependencies]
-giga-segy-core = { path = "../giga-segy-core" }
+giga-segy-core = { version = "0.3.0", path = "../giga-segy-core" }
 
 encoding8 = "0.3"
 memmap2 = "0.5"
