Too many keywords. Grr.

--- a/giga-segy-out/Cargo.toml
+++ b/giga-segy-out/Cargo.toml
@@ -4,7 +4,7 @@ authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
 description = "A library allows writing of SEG-Y."
 documentation = "https://docs.rs/giga_segy_out"
 edition = "2018"
-keywords = ["geo", "SEG-Y", "SEGY", "seismic", "output", "writer"]
+keywords = ["geo", "SEG-Y", "SEGY", "seismic", "writer"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/GiGainfosystems/giga-segy"
 version = "0.3.0"
