--- a/giga-segy-in/Cargo.toml
+++ b/giga-segy-in/Cargo.toml
@@ -4,7 +4,7 @@ authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
 description = "A library allows parsing of SEG-Y."
 documentation = "https://docs.rs/giga_segy_in"
 edition = "2018"
-keywords = ["geo", "SEG-Y", "SEGY", "seismic", "input", "parser"]
+keywords = ["geo", "SEG-Y", "SEGY", "seismic", "parser"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/GiGainfosystems/giga-segy"
 version = "0.3.0"
