--- a/giga-segy-core/Cargo.toml
+++ b/giga-segy-core/Cargo.toml
@@ -8,7 +8,7 @@ keywords = ["geo", "SEG-Y", "SEGY", "seismic"]
 license = "MIT OR Apache-2.0"
 links = ""
 repository = "https://github.com/GiGainfosystems/giga-segy"
-version = "0.3.2"
+version = "0.3.3"
 
 [lib]
 name = "giga_segy_core"
@@ -20,11 +20,12 @@ ibmfloat = "0.1"
 num = "0.4"
 num-derive = "0.3"
 num-traits = "0.2"
-serde = { version = "1.0.40", features = ["derive"], optional = true }
+serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1", optional = true }
 
-[dev-dependencies]
-giga-segy-out = { path = "../giga-segy-out", version = "0.3.1" }
+[dev-dependencies.giga-segy-out]
+path = "../giga-segy-out"
+version = "0.3.3"
 
 [build-dependencies.cbindgen]
 version = "0.24"
