Update various aspects of the Cargo.toml files in acordance with the lib.rs dashboard. Updated: - serde to ^1.0.103. - cbindgen to 0.26. - num-derive to 0.4. - Min rust-version = 1.64.0 - categories added. - All self crates to version 0.4.0 (there may be backwards incomaptibility in the updates).

--- a/giga-segy-out/Cargo.toml
+++ b/giga-segy-out/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "giga-segy-out"
 authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
+categories = ["science::geo"]
 description = "A library allows writing of SEG-Y."
 documentation = "https://docs.rs/giga_segy_out"
 edition = "2018"
 keywords = ["geo", "SEG-Y", "SEGY", "seismic", "writer"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/GiGainfosystems/giga-segy"
-version = "0.3.3"
+version = "0.4.0"
 
 [lib]
 name = "giga_segy_out"
@@ -15,7 +16,7 @@ crate-type = ["staticlib","rlib"]
 
 [dependencies.giga-segy-core]
 path = "../giga-segy-core"
-version = "0.3.3"
+version = "0.4"
 
 [dependencies]
 fnv = "1"
@@ -27,4 +28,4 @@ tempfile = "3.3"
 
 [dev-dependencies.giga-segy-in]
 path = "../giga-segy-in"
-version = "0.3"
+version = "0.4"
