--- a/giga-segy-in/Cargo.toml
+++ b/giga-segy-in/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "giga-segy-in"
 authors = ["Aleksey Zholobenko <aleksey.zholobenko@giga-infosystems.com>"]
+categories = ["science::geo", "parser-implementations"]
 description = "A library allows parsing of SEG-Y."
 documentation = "https://docs.rs/giga_segy_in"
 edition = "2018"
 keywords = ["geo", "SEG-Y", "SEGY", "seismic", "parser"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/GiGainfosystems/giga-segy"
-version = "0.3.2"
+version = "0.4.0"
 
 [lib]
 name = "giga_segy_in"
@@ -15,11 +16,11 @@ crate-type = ["staticlib","rlib"]
 
 [dependencies.giga-segy-core]
 path = "../giga-segy-core"
-version = "0.3.3"
+version = "0.4"
 
 [dependencies]
 encoding8 = "0.3"
-memmap2 = "0.8"
+memmap2 = "0.9"
 num = "0.4"
 
 [features]
